--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuetify": "^3.1.5"
   },
   "devDependencies": {
+    "@mdi/font": "^7.1.96",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
